@@ -54,6 +54,19 @@ File example:
 
 It supports the same expressions as the L<group|Rex::Commands/group> command.
 
+Since 0.42, it also supports custom host properties if the L<use_server_auth|Rex/use_server_auth> feature flag is enabled:
+
+ # servers.ini
+ [webservers]
+ server01 user=root password=foob4r sudo=true services=apache,memcache
+
+ # Rexfile
+ use Rex -feature => ['use_server_auth'];
+
+ task 'list_services', group => 'webservers', sub {
+   say connection->server->option('services');
+ }
+
 =cut
 
 sub groups_file {
